# py_toolkit

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/py_toolkit/genesys_utility/: __init__.py  conversation.py  conversation_details_query.py  transformations.py  users.py
src/py_toolkit/gmail_utility/: file_handling.py  inbox.py
src/py_toolkit/google_sheets_utility/: __init__.py
src/py_toolkit/salesforce_utility/: __init__.py  auth.py  reporting.py
src/py_toolkit/sharepoint_utility/: __init__.py  auth.py  uploader.py
src/utility_functions/: __init__.py
src/utility_functions/genesys_utility/: auth.py
src/utility_functions/gmail_utility/: __init__.py  auth.py  common.py  file_handling.py  send.py
src/utility_functions/google_sheets_utility/: common.py  sheets.py
src/utility_functions/salesforce_utility/: common.py  query.py  transformations.py
src/utility_functions/sharepoint_utility/: __init__.py  common.py  explorer.py
tests/: test_genesys_utility.py  test_gmail_utility.py  test_google_sheets_utility.py  test_salesforce_utility.py  test_sharepoint_utility.py
